<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/select_account_btn_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_android_black_48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="20dp"/>

            <Spinner
                android:id="@+id/account_selector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_below="@+id/select_account_btn_icon"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_account_desc"
                android:layout_below="@+id/account_selector"
                android:layout_alignLeft="@+id/select_account_btn_icon"
                android:layout_alignStart="@+id/select_account_btn_icon"
                android:id="@+id/select_account_explanation" />


            <TextView
                android:id="@+id/input_table_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_table_name_title_text"
                android:layout_below="@+id/select_account_explanation"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/table_name_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:layout_alignTop="@+id/input_table_name"
                android:layout_toEndOf="@+id/input_table_name"
                android:layout_marginLeft="100dp" />

            <TextView
                android:id="@+id/input_sheet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_sheet_name_title_text"
                android:layout_below="@+id/input_table_name"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/sheet_name_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:layout_alignTop="@+id/input_sheet_name"
                android:layout_toEndOf="@+id/input_sheet_name"
                android:layout_marginLeft="100dp" />

            <TextView
                android:id="@+id/input_data_row_number_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_data_row_number_field_title"
                android:layout_below="@+id/input_sheet_name"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:textSize="14dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data_row_number_input_field"
                android:inputType="number"
                android:layout_alignTop="@+id/input_data_row_number_field_title"
                android:layout_marginStart="20dp"
                android:layout_alignEnd="@+id/table_name_input_field" />

            <TextView
                android:id="@+id/input_axis_col_number_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_axis_col_number_field_title"
                android:layout_below="@+id/input_data_row_number_field_title"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/axis_col_number_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignTop="@+id/input_axis_col_number_field_title"
                android:layout_marginLeft="20dp"
                android:layout_alignEnd="@+id/table_name_input_field" />

            <TextView
                android:id="@+id/input_data_col_number_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_data_col_number_field_title"
                android:layout_below="@+id/input_axis_col_number_field_title"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/data_col_number_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignTop="@+id/input_data_col_number_field_title"
                android:layout_marginLeft="20dp"
                android:layout_alignEnd="@+id/table_name_input_field" />


            <Button
                android:id="@+id/show_chart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ok"
                android:layout_gravity="center_horizontal"
                android:background="#2490fb"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>