...
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:src="@drawable/ic_add_circle_outline_black_48dp"
        android:id="@+id/add_chart_button"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
...
